--- a/adhi.html
+++ b/adhi.html
@@ -13,10 +13,10 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Hello
+  Hello!
 </p>
 <p>
-  Sean made a change
+  Seen made a change
 </p>
 
 </body>
